syntax = "proto3";

package workspace.v1;

import "profile/v1/profile.proto";
import "util/page.proto";
import "util/search.proto";

option go_package = "github.com/bibz-project/gile-back/libs/proto/workspace/v1";

// ============================================================================
// ENUMS
// ============================================================================

enum WorkspaceVisibility {
  PRIVATE = 0;
  TEAM = 1;
  PUBLIC = 2;
}

enum WorkspaceRole {
  SUPER_ADMIN = 0;
  WORKSPACE_OWNER = 1;
  WORKSPACE_ADMIN = 2;
  PROJECT_MANAGER = 3;
  DEVELOPER = 4;
  DESIGNER = 5;
  TESTER = 6;
  VIEWER = 7;
  GUEST = 8;
}


// ============================================================================
// COMMON SEARCH TYPES
// ============================================================================
// Using util.SearchQuery, util.SortOption, util.GroupByOption, util.SortOrder from util/search.proto

// ============================================================================
// REQUEST/RESPONSE MESSAGES
// ============================================================================

message CreateWorkspaceRequest {
  string ownerId = 1;
  CreateWorkspaceDto dto = 2;
}

message CreateWorkspaceResponse {
  WorkspaceDto workspace = 1;
}

message SearchWorkspacesRequest {
  util.SearchQuery params = 1;
}

message SearchWorkspacesResponse {
  repeated WorkspaceDto items = 1;
  int32 total = 2 [deprecated = true];
  int32 skip = 3 [deprecated = true];
  int32 take = 4 [deprecated = true];
  bool has_next = 5;
  bool has_prev = 6;
}

message GetWorkspaceByIdRequest {
  string id = 1;
  optional string userId = 2;
}

message GetWorkspaceByIdResponse {
  WorkspaceDto workspace = 1;
}

message GetOverviewRequest {
  util.SearchQuery params = 1;
  string userId = 2;
}

message GetOverviewResponse {
  repeated WorkspaceOverview items = 1;
  int32 total = 2 [deprecated = true];
  int32 skip = 3 [deprecated = true];
  int32 take = 4 [deprecated = true];
  bool has_next = 5;
  bool has_prev = 6;
}

message UpdateWorkspaceRequest {
  string id = 1;
  UpdateWorkspaceDto dto = 2;
  optional string updatedBy = 3;
}

message UpdateWorkspaceResponse {
  WorkspaceDto workspace = 1;
}

message DeleteWorkspaceRequest {
  string id = 1;
  optional string deletedBy = 2;
}

message DeleteWorkspaceResponse {
  bool success = 1;
}

// ============================================================================
// DTOs (aligned with libs/shared/types/src/workspace/dtos.ts)
// ============================================================================

message CreateWorkspaceDto {
  string name = 1;
  optional string slug = 2;
  optional string description = 3;
  optional string logoUrl = 4;
  optional WorkspaceVisibility visibility = 5;
}

message UpdateWorkspaceDto {
  optional string name = 1;
  optional string slug = 2;
  optional string description = 3;
  optional string logoUrl = 4;
  optional WorkspaceVisibility visibility = 5;
  optional bool isActive = 6;
}

message WorkspaceOverview {
  string id = 1;
  string name = 2;
  string logo_url = 3;
  WorkspaceVisibility visibility = 4;
  bool is_active = 5;
}

message WorkspaceDto {
  string id = 1;
  string name = 2;
  optional string slug = 3;
  string description = 4;
  string logo_url = 5;
  WorkspaceVisibility visibility = 6;
  bool is_active = 7;
  string created_at = 8;
  string updated_at = 9;
  profile.v1.ProfileOverview created_by_user = 10;
  profile.v1.ProfileOverview updated_by_user = 11;
  profile.v1.ProfileOverview owner = 12;
}

// ============================================================================
// SERVICE
// ============================================================================

service WorkspaceService {
  rpc Create(CreateWorkspaceRequest) returns (WorkspaceDto);
  rpc Search(SearchWorkspacesRequest) returns (SearchWorkspacesResponse);
  rpc GetById(GetWorkspaceByIdRequest) returns (WorkspaceDto);
  rpc GetOverview(GetOverviewRequest) returns (GetOverviewResponse);
  rpc Update(UpdateWorkspaceRequest) returns (WorkspaceDto);
  rpc Delete(DeleteWorkspaceRequest) returns (DeleteWorkspaceResponse);
}
