export const PROTO_HEALTH_PATH = "libs/proto/health/v1/health.proto";
export const PROTO_HEALTH_PACKAGE = "health.v1";
export const HEALTH_SERVICE_NAME = "Health";

export const PROTO_LOGGER_PATH = "libs/proto/logger/v1/logger.proto";
export const PROTO_LOGGER_PACKAGE = "logger.v1";
export const LOGGER_SERVICE_NAME = "Logger";

export const PROTO_AUTH_PATH = "libs/proto/auth/v1/auth.proto";
export const PROTO_AUTH_PACKAGE = "auth.v1";
export const AUTH_SERVICE_NAME = "Auth";

export const PROTO_PROFILE_PATH = "libs/proto/profile/v1/profile.proto";
export const PROTO_PROFILE_PACKAGE = "profile.v1";
export const PROFILE_SERVICE_NAME = "ProfileService";

export const PROTO_SPRINTS_PATH = "libs/proto/sprints/v1/sprints.proto";
export const PROTO_SPRINTS_PACKAGE = "sprints.v1";
export const SPRINTS_SERVICE_NAME = "Sprints";

export const PROTO_TICKETS_PATH = "libs/proto/tickets/v1/tickets.proto";
export const PROTO_TICKETS_PACKAGE = "tickets.v1";
export const TICKETS_SERVICE_NAME = "Tickets";

export const PROTO_WORKSPACE_PATH = "libs/proto/workspace/v1/workspace.proto";
export const PROTO_WORKSPACE_PACKAGE = "workspace.v1";
export const WORKSPACE_SERVICE_NAME = "WorkspaceService";
// Workspace Members (new)
export const PROTO_WORKSPACE_MEMBERS_PATH = "libs/proto/workspace/v1/workspace-members.proto";
export const WORKSPACE_MEMBERS_SERVICE_NAME = "WorkspaceMembers";

export const PROTO_LABELS_PATH = "libs/proto/labels/v1/labels.proto";
export const PROTO_LABELS_PACKAGE = "labels.v1";
export const LABELS_SERVICE_NAME = "Labels";

export const PROTO_VECTOR_PATH = "libs/proto/vector/v1/vector.proto";
export const PROTO_VECTOR_PACKAGE = "vector.v1";
export const VECTOR_SERVICE_NAME = "VectorService";
